WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51713
[Chromium, bindings] MemoryInfo wrappers leak due to caching introduced in
r57004
.
https://bugs.webkit.org/show_bug.cgi?id=51713
Summary
[Chromium, bindings] MemoryInfo wrappers leak due to caching introduced in r5...
Mikhail Naganov
Reported
2010-12-29 10:16:48 PST
See
https://bugs.webkit.org/show_bug.cgi?id=51712
. Getters of MemoryInfo objects must not cache wrappers.
Attachments
proposed fix
(5.89 KB, patch)
2010-12-29 10:19 PST
,
Mikhail Naganov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Naganov
Comment 1
2010-12-29 10:19:05 PST
Created
attachment 77629
[details]
proposed fix
Vitaly Repeshko
Comment 2
2010-12-30 04:23:30 PST
(In reply to
comment #1
)
> Created an attachment (id=77629) [details] > proposed fix
LGTM as a work-around until
bug 51712
is fixed.
WebKit Commit Bot
Comment 3
2010-12-30 05:05:11 PST
Comment on
attachment 77629
[details]
proposed fix Clearing flags on attachment: 77629 Committed
r74795
: <
http://trac.webkit.org/changeset/74795
>
WebKit Commit Bot
Comment 4
2010-12-30 05:05:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug